src/log
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c fmax.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c variables.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c initialization.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c collapse_times.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c fmax-pfft.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c GenIC.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c ReadParamfile.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c allocations.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c LPT.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c distribute.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c fragment.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c build_groups.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c write_halos.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c write_snapshot.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c write_mass_maps.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c cosmo.c
mpicc -I/home/tcastro/include -I/usr/include  -I/home/tcastro/include/gsl -I/usr/include -I/usr/include -O3 -Wno-unused-result -fopenmp -DTWO_LPT -DTHREE_LPT -DPLC -DMASS_MAPS -DMASS_MAPS_PROFILE -DELL_CLASSIC -DSCALE_DEPENDENT -DREAD_PK_TABLE -DRECOMPUTE_DISPLACEMENTS -DREAD_HUBBLE_TABLE -DUSE_FFT_THREADS -c pinocchio.c
write_mass_maps.c: In function ‘write_mass_maps’:
write_mass_maps.c:413:23: error: ‘condition_particle_F’ undeclared (first use in this function)
  413 |       fun.function = &condition_particle_F;
      |                       ^~~~~~~~~~~~~~~~~~~~
write_mass_maps.c:413:23: note: each undeclared identifier is reported only once for each function it appears in
write_mass_maps.c:418:24: warning: implicit declaration of function ‘rho2_from_xbase_and_rep’ [-Wimplicit-function-declaration]
  418 |       double rho2_hi = rho2_from_xbase_and_rep(x_hi, ctx.rep, ctx.ipd2);
      |                        ^~~~~~~~~~~~~~~~~~~~~~~
write_mass_maps.c:434:13: warning: implicit declaration of function ‘within_aperture’ [-Wimplicit-function-declaration]
  434 |         if (within_aperture(Fg, &ctx))
      |             ^~~~~~~~~~~~~~~
write_mass_maps.c:480:22: warning: implicit declaration of function ‘condition_particle_F’ [-Wimplicit-function-declaration]
  480 |             if (fabs(condition_particle_F(Fm, &ctx)) < brent_err)
      |                      ^~~~~~~~~~~~~~~~~~~~
write_mass_maps.c: At top level:
write_mass_maps.c:759:1: error: expected identifier or ‘(’ before ‘}’ token
  759 | }
      | ^
make: *** [Makefile:265: write_mass_maps.o] Error 1
make: *** Waiting for unfinished jobs....
